--- a/Project 3 - Bike Rental Demand Prediction/code/Hourly Bike Rental Demand Prediction.ipynb
+++ b/Project 3 - Bike Rental Demand Prediction/code/Hourly Bike Rental Demand Prediction.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,13 +39,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# reading the data from the csv files\n",
     "bike_train_df = pd.read_csv(\"C:/Users/saadv/Desktop/Spiced/Data-Science/Project 3 - Bike Rental Demand Prediction/data/train.csv\",sep=\",\",parse_dates=True,index_col=0)\n",
     "bike_test_df = pd.read_csv(\"C:/Users/saadv/Desktop/Spiced/Data-Science/Project 3 - Bike Rental Demand Prediction/data/test.csv\",sep=\",\",parse_dates=True,index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "DatetimeIndex: 6493 entries, 2011-01-20 00:00:00 to 2012-12-31 23:00:00\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column      Non-Null Count  Dtype  \n",
+      "---  ------      --------------  -----  \n",
+      " 0   season      6493 non-null   int64  \n",
+      " 1   holiday     6493 non-null   int64  \n",
+      " 2   workingday  6493 non-null   int64  \n",
+      " 3   weather     6493 non-null   int64  \n",
+      " 4   temp        6493 non-null   float64\n",
+      " 5   atemp       6493 non-null   float64\n",
+      " 6   humidity    6493 non-null   int64  \n",
+      " 7   windspeed   6493 non-null   float64\n",
+      "dtypes: float64(3), int64(5)\n",
+      "memory usage: 456.5 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "bike_test_df.info()"
    ]
   },
   {
